# awtk-esp

./: CMakeLists.txt  README.md  sdkconfig
components/awtk/: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/awtk/awtk-port/: awtk_config.h  lcd_impl.c  main_loop_impl.c  platform.c
docs/: notes.md
main/: CMakeLists.txt  real_main.c
